# PAD_Final_Project

./: .gitignore  README.md  amend_parquet.py  current_working_model.py  current_working_model_cpu.py  main.ipynb  old_notworking_model.py  pyproject.toml
mlruns/0/: meta.yaml
