[tool.poetry]
name = "pad-final-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pyarrow = ">=4.0.0,<20.0.0"
numpy = "<=2.1"
pandas = "^2.2.3"
torch = "^2.7.0"
scikit-learn = "^1.6.1"
matplotlib = ">=3.5,<=3.10"
ydata-profiling = "^4.16.1"
ipywidgets = "^8.1.7"
prophet = "^1.1.6"
catboost = "^1.2.8"
optuna = "^4.3.0"
polars = "^1.29.0"
dask = "^2025.4.1"
jupyterlab = "^4.4.2"
mlserver = "^1.7.0"
mlserver-mlflow = "^1.7.0"
mlserver-catboost = "^1.7.0"
mlflow = "^2.22.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
